--- a/Ejercicio - Tuplas.ipynb
+++ b/Ejercicio - Tuplas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "f9953cf7",
    "metadata": {},
    "outputs": [
@@ -15,36 +15,42 @@
       "Ingresa la palabra que te gustaría\n",
       "Ejemplo: 'rock', y obtendrás un playlist de canciones o artistas que incluyan la palabra rock\n",
       "Country\n",
-      "('Country Girl (Shake It For Me)', 'Luke Bryan')\n",
-      "('Country Again', 'Thomas Rhett')\n",
-      "('Country On', 'Luke Bryan')\n",
-      "('Country', 'Niska')\n",
-      "('Country', 'XXbando')\n",
-      "('Country Grammar (Hot Shit)', 'Nelly')\n",
-      "('Take Me Home, Country Roads', 'John Denver')\n",
-      "(\"God's Country\", 'Blake Shelton')\n",
-      "('Country Boy', 'Alan Jackson')\n",
-      "('Country Song', 'Seether')\n",
-      "('Country Grammar (Hot Shit)', 'Nelly')\n",
-      "('Country Roads (Radio Version)', 'Hermes House Band')\n",
-      "('Like I Love Country Music', 'Kane Brown')\n",
-      "('Country A$$ Shit', 'Morgan Wallen')\n",
-      "('Catholic Country', 'Kings Of Convenience')\n",
-      "('Country House', 'Blur')\n",
-      "('Gone Country', 'Alan Jackson')\n",
-      "('Bat Country', 'Avenged Sevenfold')\n",
-      "('Chemtrails Over The Country Club', 'Lana Del Rey')\n",
-      "('Country Road', 'James Taylor')\n",
-      "('Dancin’ In The Country', 'Tyler Hubbard')\n",
-      "('Country', 'Upchurch')\n",
-      "('Country Stuff (feat. Jake Owen)', 'Walker Hayes')\n",
-      "(\"All Your'n\", 'Tyler Childers')\n",
-      "('Country Must Be Country Wide', 'Brantley Gilbert')\n"
+      "('Country Girl (Shake It For Me)', 'Country Mega Hits 2022', 'Luke Bryan', '3:45')\n",
+      "('Country Again', 'Country Again (Side A)', 'Thomas Rhett', '3:41')\n",
+      "('Country On', 'Country On', 'Luke Bryan', '3:56')\n",
+      "('Country', 'Game Over', 'Niska', '3:28')\n",
+      "('Country', 'Nemo', 'XXbando', '1:39')\n",
+      "('Country Grammar (Hot Shit)', 'Hip Hop 2000', 'Nelly', '4:48')\n",
+      "('Take Me Home, Country Roads', 'Poems, Prayers and Promises', 'John Denver', '3:10')\n",
+      "(\"God's Country\", \"God's Country\", 'Blake Shelton', '3:25')\n",
+      "('Country Boy', '34 Number Ones', 'Alan Jackson', '4:07')\n",
+      "('Country Song', 'Holding Onto Strings Better Left To Fray', 'Seether', '3:49')\n",
+      "('Country Grammar (Hot Shit)', 'Country Grammar', 'Nelly', '4:47')\n",
+      "('Country Roads (Radio Version)', 'Country Roads', 'Hermes House Band', '3:21')\n",
+      "('Like I Love Country Music', 'Like I Love Country Music', 'Kane Brown', '3:54')\n",
+      "('Country A$$ Shit', 'Dangerous: The Double Album (Bonus)', 'Morgan Wallen', '3:06')\n",
+      "('Catholic Country', 'Peace Or Love', 'Kings Of Convenience', '3:01')\n",
+      "('Country House', 'Blur: The Best Of', 'Blur', '3:57')\n",
+      "('Gone Country', '16 Biggest Hits', 'Alan Jackson', '4:19')\n",
+      "('Bat Country', 'City of Evil', 'Avenged Sevenfold', '5:11')\n",
+      "('Chemtrails Over The Country Club', 'Chemtrails Over The Country Club', 'Lana Del Rey', '4:31')\n",
+      "('Country Road', 'Greatest Hits', 'James Taylor', '3:25')\n",
+      "('Dancin’ In The Country', 'Tyler Hubbard', 'Tyler Hubbard', '2:59')\n",
+      "('Country', 'Summer Love', 'Upchurch', '2:39')\n",
+      "('Country Stuff (feat. Jake Owen)', 'Country Stuff The Album', 'Walker Hayes', '2:34')\n",
+      "(\"All Your'n\", 'Country Squire', 'Tyler Childers', '3:38')\n",
+      "('Country Must Be Country Wide', 'Gameday Country', 'Brantley Gilbert', '3:35')\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
+    "from math import floor\n",
+    "\n",
+    "def duration(duration_in_seconds):\n",
+    "    min = floor(duration_in_seconds/60)\n",
+    "    secs = duration_in_seconds % 60\n",
+    "    return(\"{}:{:02d}\".format(min, secs))\n",
     "\n",
     "print(\"Lista de Reproducción\\n\")\n",
     "\n",
@@ -67,7 +73,7 @@
     "      \n",
     "response = requests.request(\"GET\", url, headers=headers, params=querystring).json()\n",
     "for element in response['data']:\n",
-    "    my_list.append((element['title'], element['artist']['name']))\n",
+    "    my_list.append((element['title'], element['album']['title'], element['artist']['name'], duration(element['duration'])))\n",
     "\n",
     "#print(my_list, \"\\n\")\n",
     "\n",
@@ -81,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "769716b8",
+   "id": "94d25e96",
    "metadata": {},
    "outputs": [],
    "source": []
