--- a/Ejercicio - Ciclos y Declaraciones Especiales.ipynb
+++ b/Ejercicio - Ciclos y Declaraciones Especiales.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a2190627",
+   "execution_count": 24,
+   "id": "c32ddfc4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "00:01 stop\n"
+      "00:00\r",
+      "00:00 stop\n"
      ]
     }
    ],
@@ -20,28 +21,31 @@
     "def countup(time_sec):\n",
     "    counter = 0\n",
     "    \n",
-    "    # Primero imprime 00:00\n",
-    "    mins, secs = 0, 0\n",
-    "    timeformat = '{:02d}:{:02d}'.format(mins, secs)\n",
-    "    print(timeformat, end='\\r')\n",
-    "    \n",
-    "    # Si el tiempo son 0 segundos no entra al ciclo\n",
-    "    while counter < time_sec:\n",
-    "        time.sleep(1)\n",
-    "        counter += 1\n",
+    "    while counter <= time_sec:\n",
     "        mins, secs = divmod(counter, 60)\n",
     "        timeformat = '{:02d}:{:02d}'.format(mins, secs)\n",
     "        print(timeformat, end='\\r')\n",
-    "        \n",
+    "        if counter == time_sec:\n",
+    "            break\n",
+    "        time.sleep(1)\n",
+    "        counter += 1\n",
     "    print(timeformat,\"stop\")\n",
     "    \n",
-    "countup(1)"
+    "countup(0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32ddfc4",
+   "id": "188d1b3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76f0ee77",
    "metadata": {},
    "outputs": [],
    "source": []
